app/python-test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-test
  namespace: lab-my-flask-app2
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: python-test
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: python-test
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/lab-my-flask-app/python-test@sha256:e4252b69709431c7981ccb08095bd6eb138e75d81a0ca765fcea7b96d1006fb2
        imagePullPolicy: IfNotPresent
        name: python-test
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 800m
          requests:
            cpu: 150m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
